[package]
name = "volkswagen"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
description = "Make the damn test-suite succeed under CI-conditions"
license = "MIT"
repository = "https://github.com/lukaslueg/volkswagen"
readme = "README.md"

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"
built = { version = "0.3", default_features=false }

[lib]
proc-macro = true
